--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,18 @@
       <artifactId>commons-logging</artifactId>
       <version>1.1.1</version>
     </dependency>
+    <!-- FIT and FITnesse -->
+    <dependency>
+      <groupId>com.c2.fit</groupId>
+  	  <artifactId>fit</artifactId>
+  	  <version>1.1</version>
+    </dependency>
+    <dependency>
+   	  <groupId>org.fitnesse</groupId>
+	  <artifactId>fitnesse</artifactId>
+      <version>20081201</version>
+      <scope>test</scope>
+    </dependency>
     <!-- @see http://mirrors.ibiblio.org/pub/mirrors/maven2/junit/junit/ -->
     <dependency>
       <groupId>junit</groupId>
@@ -148,5 +160,12 @@
       </roles>
     </contributor>
   </contributors>
+
+  <!-- 
+  	  (possible) additional repositories:
+  	  http://source.valtech.com/repo/content/repositories/releases/
+   -->
+  <repositories>
+  </repositories>
 
 </project>
