--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
   <artifactId>xport</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1</version>
-  <name>LogBrowser</name>
-  <url>http://github/gdv.xport</url>
+  <name>GDV-Xport</name>
+  <url>http://github.com/oboehm/gdv.xport</url>
     
   <build>
   
@@ -29,6 +29,21 @@
   	  	  <target>1.6</target>
   	  	</configuration>
   	  </plugin>
+
+	  <!-- we must set some system properties for testing -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.4.2</version>
+        <configuration>
+          <systemProperties>
+            <property>
+              <name>gdv.VU-Nummer</name>
+              <value>4711</value>
+            </property>
+          </systemProperties>
+        </configuration>
+      </plugin>
   	  
   	</plugins>
   	
@@ -160,6 +175,11 @@
       </roles>
     </contributor>
   </contributors>
+  
+  <scm>
+    <connection>scm:git:git://github.com/oboehm/gdv.xport</connection>
+    <url>http://github.com/oboehm/gdv.xport</url>
+  </scm>
 
   <!-- 
   	  (possible) additional repositories:
