--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,38 @@
   	  	</configuration>
   	  </plugin>
 
+      <!--
+        AspectJ compiler
+        @see http://www.mail-archive.com/user@mojo.codehaus.org/msg00157.html
+        @see http://mail-archives.apache.org/mod_mbox/maven-users/200601.mbox/%3CB39B8F0E-BB20-44DB-96B3-3C7FCB85B594@gmail.com%3E
+        @see http://mojo.codehaus.org/aspectj-maven-plugin/differentTestAndCompile.html
+       -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <configuration>
+          <options>
+            <option>-verbose</option>
+            <option>-showWeaveInfo</option>
+          </options>
+          <ajdtBuildDefFile>build.ajproperties</ajdtBuildDefFile>
+          <aspectLibraries>
+            <aspectLibrary>
+              <groupId>net.sf.patterntesting</groupId>
+              <artifactId>patterntesting-rt</artifactId>
+            </aspectLibrary>
+            <aspectLibrary>
+              <groupId>net.sf.patterntesting</groupId>
+              <artifactId>patterntesting-check-ct</artifactId>
+            </aspectLibrary>
+            <aspectLibrary>
+              <groupId>net.sf.patterntesting</groupId>
+              <artifactId>patterntesting-check-rt</artifactId>
+            </aspectLibrary>
+          </aspectLibraries>
+        </configuration>
+      </plugin>
+
 	  <!-- we must set some system properties for testing -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -54,6 +86,11 @@
 
   <dependencies>
   
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>1.6.6</version>
+    </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
@@ -87,6 +124,16 @@
     <dependency>
       <groupId>net.sf.patterntesting</groupId>
       <artifactId>patterntesting-rt</artifactId>
+      <version>0.9.7</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.patterntesting</groupId>
+      <artifactId>patterntesting-check-ct</artifactId>
+      <version>0.9.7</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.patterntesting</groupId>
+      <artifactId>patterntesting-check-rt</artifactId>
       <version>0.9.7</version>
     </dependency>
 
