--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
     </license>
   </licenses>
     
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <build>
   
   	<plugins>
