--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <configLocation>config/checkstyle.xml</configLocation>
+        </configuration>
       </plugin>
     </plugins>
   </reporting>
