--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="var" path="M2_REPO/net/sf/oval/oval/1.40/oval-1.40.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-io/commons-io/1.4/commons-io-1.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
