--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 	</classpathentry>
 	<classpathentry kind="var" path="M2_REPO/net/sf/oval/oval/1.40/oval-1.40.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-io/commons-io/1.4/commons-io-1.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-cli/commons-cli/1.2/commons-cli-1.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
