cobertura activated in build for Hudson

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,28 @@
           </systemProperties>
         </configuration>
       </plugin>
+
+      <!-- 
+          see http://wiki.hudson-ci.org//display/HUDSON/Cobertura+Plugin
+       -->
+      <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+              <formats>
+                  <format>xml</format>
+              </formats>
+          </configuration>
+          <executions>
+              <execution>
+                  <phase>package</phase>
+                  <goals>
+                      <goal>cobertura</goal>
+                  </goals>
+              </execution>
+          </executions>
+      </plugin>
   	  
   	</plugins>
   	
