--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
       <!-- 
           see http://wiki.hudson-ci.org//display/HUDSON/Cobertura+Plugin
        -->
+      <!-- 
       <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>cobertura-maven-plugin</artifactId>
@@ -112,7 +113,8 @@
               </execution>
           </executions>
       </plugin>
-  	  
+  	   -->
+       
   	</plugins>
   	
   </build>
@@ -260,12 +262,16 @@
         Cobertura
         see http://mojo.codehaus.org/cobertura-maven-plugin/usage.html
        -->
-      <!-- 
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
+        <configuration>
+            <formats>
+                <format>xml</format>
+                <format>hml</format>
+            </formats>
+        </configuration>
       </plugin>
-       -->
       <!-- 
           findbugs
           start 'mvn findbugs:findbugs'
