--- a/pom.xml
+++ b/pom.xml
@@ -266,10 +266,10 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
         <configuration>
-            <formats>
-                <format>xml</format>
-                <format>hml</format>
-            </formats>
+          <formats>
+            <format>html</format>
+            <format>xml</format>
+          </formats>
         </configuration>
       </plugin>
       <!-- 
