--- a/.classpath
+++ b/.classpath
@@ -11,13 +11,13 @@
 	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.15/log4j-1.2.15.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/c2/fit/fit/1.1/fit-1.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/fitnesse/fitnesse/20081201/fitnesse-20081201.jar"/>
-	<classpathentry kind="var" path="M2_REPO/net/sf/patterntesting/patterntesting-rt/0.9.7/patterntesting-rt-0.9.7.jar">
+	<classpathentry kind="var" path="M2_REPO/net/sf/patterntesting/patterntesting-rt/0.9.8/patterntesting-rt-0.9.8.jar">
 		<attributes>
 			<attribute name="org.eclipse.ajdt.aspectpath" value="org.eclipse.ajdt.aspectpath"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.ajdt.core.ASPECTJRT_CONTAINER"/>
-	<classpathentry kind="var" path="M2_REPO/net/sf/patterntesting/patterntesting-check-rt/0.9.7/patterntesting-check-rt-0.9.7.jar">
+	<classpathentry kind="var" path="M2_REPO/net/sf/patterntesting/patterntesting-check-rt/0.9.8/patterntesting-check-rt-0.9.8.jar">
 		<attributes>
 			<attribute name="org.eclipse.ajdt.aspectpath" value="org.eclipse.ajdt.aspectpath"/>
 		</attributes>
@@ -27,5 +27,10 @@
 	<classpathentry kind="var" path="M2_REPO/commons-cli/commons-cli/1.2/commons-cli-1.2.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-httpclient/commons-httpclient/3.1/commons-httpclient-3.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/sf/patterntesting/patterntesting-concurrent/0.9.8/patterntesting-concurrent-0.9.8.jar">
+		<attributes>
+			<attribute name="org.eclipse.ajdt.aspectpath" value="org.eclipse.ajdt.aspectpath"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
