--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>gdv</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>jar</packaging>
-  <version>0.4.0</version>
+  <version>0.4.1-SNAPSHOT</version>
   <name>GDV-Xport</name>
   <url>http://github.com/oboehm/gdv.xport</url>
   <!-- see http://maven.apache.org/pom.html#Licenses -->
@@ -41,6 +41,7 @@
         <artifactId>maven-site-plugin</artifactId>
         <configuration>
           <locales>de</locales>
+          <outputEncoding>UTF-8</outputEncoding>
         </configuration>
       </plugin>
 
