--- a/pom.xml
+++ b/pom.xml
@@ -320,11 +320,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.3</version>
+        <version>2.4</version>
         <configuration>
-          <configLocation>config/checkstyle.xml</configLocation>
-          <suppressionsLocation>config/checkstyle-suppressions.xml</suppressionsLocation>
-          <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+          <configLocation>${basedir}/config/checkstyle.xml</configLocation>
+          <suppressionsLocation>${basedir}/config/checkstyle-suppressions.xml</suppressionsLocation>
+          <suppressionsFileExpression>${basedir}/checkstyle.suppressions.file</suppressionsFileExpression>
         </configuration>
       </plugin>
     </plugins>
