--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,12 @@
       <version>[4.4,]</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.15</version>
+      <scope>test</scope>
+    </dependency>
 	<!-- PatternTesting -->
     <dependency>
       <groupId>org.patterntesting</groupId>
