--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Thu Dec 17 19:22:29 CET 2009
+#Thu Dec 02 17:05:45 CET 2010
 eclipse.preferences.version=1
+encoding//src/main/resources/gdv/xport/util/template.html=ISO-8859-1
 encoding//src/test/resources/musterdatei_041222.txt=ISO-8859-1
