--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,28 @@
           </executions>
       </plugin>
   	   -->
-       
+      
+      <!-- 
+          Build should fail if FindBugs reports an error
+          see http://mojo.codehaus.org/findbugs-maven-plugin/examples/violationChecking.html
+       -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <configuration>
+          <effort>Max</effort>
+          <threshold>Normal</threshold>
+          <excludeFilterFile>config/findbugs-exclude.xml</excludeFilterFile>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
   	</plugins>
   	
   </build>
@@ -301,7 +322,7 @@
       <!-- 
           findbugs
           start 'mvn findbugs:findbugs'
-          http://mojo.codehaus.org/findbugs-maven-plugin/2.0.1/usage.html
+          http://mojo.codehaus.org/findbugs-maven-plugin/
           http://docs.codehaus.org/display/MAVENUSER/FindBugs+Plugin
        -->    
       <plugin>
