--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,5 @@
-#Sat Mar 26 18:27:29 CET 2011
+#Wed Apr 06 20:28:17 CEST 2011
 eclipse.preferences.version=1
-encoding//src/main/java/gdv/xport/satz/feld/Feld0200.java=UTF-8
+encoding//src/main/java/gdv/xport/satz/feld/Feld200.java=UTF-8
 encoding//src/main/resources/gdv/xport/util/template.html=ISO-8859-1
 encoding//src/test/resources/musterdatei_041222.txt=ISO-8859-1
