--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>gdv</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>jar</packaging>
-  <version>0.6.0</version>
+  <version>0.6.1-SNAPSHOT</version>
   <name>GDV-Xport</name>
   <url>http://labs.agentes.de/gdv.xport/</url>
   <organization>
@@ -27,7 +27,7 @@
   </licenses>
 
   <properties>
-    <patterntesting.version>1.0.3</patterntesting.version>
+    <patterntesting.version>1.1.0</patterntesting.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -57,10 +57,138 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>2.2</version>
+        <version>3.0-beta-3</version>
         <configuration>
           <locales>de</locales>
           <outputEncoding>UTF-8</outputEncoding>
+          <reportPlugins>
+              <!-- Java Cross Reference Listing -->
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.2</version>
+              </plugin>
+		      <!-- 
+		          Changes
+		          see http://maven.apache.org/plugins/maven-changes-plugin/usage.html
+		       -->
+		      <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-changes-plugin</artifactId>
+		        <version>2.5</version>
+		        <reportSets>
+		          <reportSet>
+		            <reports>
+		              <report>changes-report</report>
+		            </reports>
+		          </reportSet>
+		        </reportSets>
+		      </plugin>
+		      <!-- 
+		          Javadoc 
+		          see http://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html
+		      -->
+		      <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-javadoc-plugin</artifactId>
+		        <version>2.8</version>
+		        <configuration>
+		          <source>1.6</source>
+		          <show>protected</show>
+		          <links>
+		            <link>http://java.sun.com/javase/6/docs/api/</link>
+		            <link>http://www.eclipse.org/aspectj/doc/released/runtime-api</link>
+		            <link>http://junit.sourceforge.net/javadoc/</link>
+		          </links>
+		        </configuration>
+		      </plugin>
+		      <!-- TODO list -->
+		      <plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>taglist-maven-plugin</artifactId>
+		        <version>2.4</version>
+		        <configuration>
+		          <tags>
+		            <tag>TODO</tag>
+		            <tag>FIXME</tag>
+		          </tags>
+		        </configuration>
+		      </plugin>
+		      <!-- Unit Tests -->
+		      <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-surefire-report-plugin</artifactId>
+		        <version>2.8.1</version>
+		      </plugin>
+		      <!-- 
+		          code smells
+		          start 'mvn pmd:pmd'
+		          http://maven.apache.org/plugins/maven-pmd-plugin/
+		      -->
+		      <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-pmd-plugin</artifactId>
+		        <version>2.5</version>
+		        <configuration>
+		          <linkXref>true</linkXref>
+		          <sourceEncoding>utf-8</sourceEncoding>
+		          <minimumTokens>100</minimumTokens>
+		          <targetJdk>1.5</targetJdk>
+		        </configuration>
+		      </plugin>
+		      <!-- 
+		        Cobertura
+		        see http://mojo.codehaus.org/cobertura-maven-plugin/usage.html
+		       -->
+		      <plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>cobertura-maven-plugin</artifactId>
+		        <version>2.5.1</version>
+		        <configuration>
+		          <formats>
+		            <format>html</format>
+		            <format>xml</format>
+		          </formats>
+		        </configuration>
+		      </plugin>
+		      <!-- 
+		          findbugs
+		          start 'mvn findbugs:findbugs'
+		          http://mojo.codehaus.org/findbugs-maven-plugin/
+		          http://docs.codehaus.org/display/MAVENUSER/FindBugs+Plugin
+		       -->    
+		      <plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>findbugs-maven-plugin</artifactId>
+		        <version>2.3.2</version>
+		        <configuration>
+		          <findbugsXmlOutput>true</findbugsXmlOutput>
+		          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+		          <xmlOutput>true</xmlOutput>
+		          <threshold>Normal</threshold>
+		          <effort>Max</effort>
+		          <excludeFilterFile>config/findbugs-exclude.xml</excludeFilterFile>
+		          <omitVisitors>FindDeadLocalStores,OverridingEqualsNotSymmetrical</omitVisitors>
+		          <onlyAnalyze>gdv.xport.-</onlyAnalyze>
+		          <debug>true</debug>
+		          <relaxed>false</relaxed>
+		        </configuration>
+		      </plugin>
+		      <!-- 
+		          Checkstyle
+		          see http://maven.apache.org/plugins/maven-checkstyle-plugin
+		       -->
+		      <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-checkstyle-plugin</artifactId>
+		        <version>2.6</version>
+		        <configuration>
+		          <configLocation>${basedir}/config/checkstyle.xml</configLocation>
+		          <suppressionsLocation>${basedir}/config/checkstyle-suppressions.xml</suppressionsLocation>
+		          <suppressionsFileExpression>${basedir}/checkstyle.suppressions.file</suppressionsFileExpression>
+		        </configuration>
+		      </plugin>
+          </reportPlugins>
         </configuration>
       </plugin>
 
@@ -157,6 +285,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
+        <version>2.3.2</version>
         <configuration>
           <effort>Max</effort>
           <threshold>Normal</threshold>
@@ -354,6 +483,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
+        <version>2.3.2</version>
         <configuration>
           <findbugsXmlOutput>true</findbugsXmlOutput>
           <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
