--- a/pom.xml
+++ b/pom.xml
@@ -347,6 +347,25 @@
       <artifactId>log4j</artifactId>
       <version>1.2.15</version>
       <scope>test</scope>
+      <!-- see http://fluca1978.blogspot.com/2011/06/maven-log4j-dependency-error.html -->
+      <exclusions>
+        <exclusion>
+          <groupId>javax.mail</groupId>
+          <artifactId>mail</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.jms</groupId>
+          <artifactId>jms</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.jdmk</groupId>
+          <artifactId>jmxtools</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.jmx</groupId>
+          <artifactId>jmxri</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 	<!-- PatternTesting -->
     <dependency>
