--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
   <properties>
     <patterntesting.version>1.1.0</patterntesting.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>1.5</java.version>
   </properties>
 
   <build>
@@ -93,7 +94,7 @@
 		        <artifactId>maven-javadoc-plugin</artifactId>
 		        <version>2.8</version>
 		        <configuration>
-		          <source>1.6</source>
+		          <source>${java.version}</source>
 		          <show>protected</show>
 		          <links>
 		            <link>http://java.sun.com/javase/6/docs/api/</link>
@@ -197,8 +198,8 @@
   	  	<artifactId>maven-compiler-plugin</artifactId>
   	  	<version>2.3.2</version>
   	  	<configuration>
-  	  	  <source>1.6</source>
-  	  	  <target>1.6</target>
+  	  	  <source>${java.version}</source>
+  	  	  <target>${java.version}</target>
   	  	</configuration>
   	  </plugin>
 
@@ -284,7 +285,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
-        <version>2.3.2</version>
         <configuration>
           <effort>Max</effort>
           <threshold>Normal</threshold>
@@ -452,7 +452,7 @@
 		<artifactId>maven-javadoc-plugin</artifactId>
 		<version>2.7</version>
 		<configuration>
-          <source>1.6</source>
+          <source>${java.version}</source>
           <show>protected</show>
 		  <links>
 		    <link>http://java.sun.com/javase/6/docs/api/</link>
