--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>gdv</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>jar</packaging>
-  <version>0.6.3</version>
+  <version>0.6.4-SNAPSHOT</version>
   <name>GDV-Xport</name>
   <url>http://labs.agentes.de/gdv.xport/</url>
   <organization>
