--- a/pom.xml
+++ b/pom.xml
@@ -287,22 +287,22 @@
           Build should fail if FindBugs reports an error
           see http://mojo.codehaus.org/findbugs-maven-plugin/examples/violationChecking.html
        -->
-<!--       <plugin> -->
-<!--         <groupId>org.codehaus.mojo</groupId> -->
-<!--         <artifactId>findbugs-maven-plugin</artifactId> -->
-<!--         <configuration> -->
-<!--           <effort>Max</effort> -->
-<!--           <threshold>Normal</threshold> -->
-<!--           <excludeFilterFile>config/findbugs-exclude.xml</excludeFilterFile> -->
-<!--         </configuration> -->
-<!--         <executions> -->
-<!--           <execution> -->
-<!--             <goals> -->
-<!--               <goal>check</goal> -->
-<!--             </goals> -->
-<!--           </execution> -->
-<!--         </executions> -->
-<!--       </plugin> -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <configuration>
+          <effort>Max</effort>
+          <threshold>Normal</threshold>
+          <excludeFilterFile>config/findbugs-exclude.xml</excludeFilterFile>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
   	</plugins>
   	
