umlauts and other characters corrected

--- a/pom.xml
+++ b/pom.xml
@@ -564,7 +564,7 @@
   
   <scm>
     <connection>scm:git:git://github.com/oboehm/gdv.xport.git</connection>
-    <url>http://github.com/oboehm/gdv.xport</url>
+    <url>https://github.com/oboehm/gdv.xport</url>
   </scm>
   
   <issueManagement>
