--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>jar</packaging>
-  <version>0.7.1-SNAPSHOT</version>
+  <version>0.9.0-SNAPSHOT</version>
   <name>GDV-Xport</name>
   <url>http://www.aosd.de/gdv.xport/</url>
   <organization>
@@ -251,6 +251,10 @@
             <exclude>**/Abstract*.java</exclude>
           </excludes>
           <systemProperties>
+            <property>
+              <name>file.encoding</name>
+              <value>ISO-8859-1</value>
+            </property>
             <property>
               <name>gdv.VU-Nummer</name>
               <value>4711</value>
@@ -523,6 +527,22 @@
       <id>oboehm</id>
       <email>oliver.boehm@gmail.com</email>
       <organization>T-Systems</organization>
+      <roles>
+        <role>Java Developer</role>
+      </roles>
+    </developer>
+    <developer>
+      <name>Ralf Klemmer</name>
+      <id>ralfklemmer</id>
+      <email>r_klemmer@gmx.de</email>
+      <roles>
+        <role>Java Developer</role>
+      </roles>
+    </developer>
+    <developer>
+      <name>Andre Janus</name>
+      <id>ajanus</id>
+      <email>mail@andre-janus.de</email>
       <roles>
         <role>Java Developer</role>
       </roles>
